@@ -26,6 +26,7 @@ All:
 All (GUI):
 
 - XRC handler for wxAuiToolBar added (Kinaou Hervé).
+- Add support for sorting wxDataViewCtrl by multiple columns (Trigve).
 - Add wxHtmlWindow::SetDefaultHTMLCursor() (Jeff A. Marr).
 - Add default ctor and Create() to wxContextHelpButton (Hanmac).
 - Send events when toggling wxPropertyGrid nodes from keyboard (Armel Asselin).
